* Fixed tsconfig build issues * Changed is() type parameters to negate using of constants * Updated other functions to support the new parameters of is()

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,5 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true
   },
-  "include": ["**/*.ts"],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "tools"
-  ]
+  "include": ["lib/**/*.ts"]
 }
