--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,10 +4,6 @@
     "module": "ESNext",
     "target": "ES2019"
   },
-  "include": ["**/*.ts"],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+  "include": ["lib/**/*.ts"],
+  "exclude": ["**/*.spec.ts"]
 }
