--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "javascript.suggest.paths": true,
-  "typescript.suggest.paths": true
+  "typescript.preferences.importModuleSpecifier": "relative"
 }
